--- a/direction-2/style.css
+++ b/direction-2/style.css
@@ -120,10 +120,10 @@ blockquote::before {
 }
 
 body a {
-    color:black;
-    text-decoration-color: var(--pink);
-    text-decoration: underline;
+    color: black;
+    text-decoration-line: underline;
     text-decoration-style: wavy;
+    text-decoration-color: var(--pink);
     text-decoration-thickness: 0.15em;
     text-underline-offset: 0.15em;
     transition: color 0.3s ease-in-out;
