--- a/direction-2/style.css
+++ b/direction-2/style.css
@@ -1,14 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=TikTok+Sans:opsz,wght@12..36,300..900&family=Zalando+Sans:ital,wght@0,200..900;1,200..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root{
-    --heading-text: "Tiktok Sans", sans-serif;
-    --body-text: "Figtree", system-ui, serif;
+    --heading-text: "Orbitron", sans-serif;
+    --body-text: "Roboto", system-ui, sans-serif;
 
     --spacing: 1rem;
 
-    --pink: #f6c6d6;
+    --pink: #5aa43a;
     --orange:#e66465;
-    --peach: #F0E3D8;
     --glass: rgba(236, 236, 236, 0.359);
 }
 
@@ -16,13 +15,14 @@ html{scroll-behavior: smooth;}
 
 /* ------------ layout ------------- */
 
+
 body{
-    background: radial-gradient(#e66465, #9198e5);
+    background: radial-gradient(#8ac65c, #e8f4c8);
 }
 
-main{
+/* main{
     background-color: var(--glass);
-}
+} */
 
 /* header{
     background: var(--pink);
@@ -40,19 +40,6 @@ h1, h2, h3, p, small, blockquote{
     padding-inline: var(--spacing);
 }
 
-h2{
-    font-family: var(--heading-text);
-    font-size: 1.4rem;
-    font-weight: 700;
-    line-height: 2.4rem;
-    text-align: start;
-    justify-content: center;
-    /* background-color: var(--orange); */
-    color: linear-gradient(#e66465, #9198e5);
-    padding-block: 0.5rem;
-    /* text-transform: uppercase; */
-}
-
 h1{
     font-family: var(--heading-text);
     font-size: 4rem;
@@ -67,13 +54,13 @@ h1{
     text-transform: uppercase;
     background: linear-gradient(
         90deg,
-        #e8f4c8,
         #c8e695,
         #8ac65c,
         #5aa43a,
+        #457D2D,
+        #5aa43a,
         #8ac65c,
-        #c8e695,
-        #e8f4c8 
+        #c8e695
     );
 
     background-size: 300% 100%;
@@ -91,6 +78,18 @@ h1{
     100% { background-position: 100% 0%; }
 }
 
+h2{
+    font-family: var(--heading-text);
+    font-size: 1.4rem;
+    font-weight: 600;
+    line-height: 2.4rem;
+    text-align: start;
+    justify-content: center;
+    /* background-color: var(--orange); */
+    color: linear-gradient(#e66465, #9198e5);
+    padding-block: 0.5rem;
+    /* text-transform: uppercase; */
+}
 
 h3{
     font-family: var(--heading-text);
@@ -128,7 +127,6 @@ blockquote {
     margin-inline-start: 1rem;
     margin-block: 4rem;
     padding: 2.5rem;
-    color: white;
     z-index: 1;
     font-family: var(--heading-text);
     font-size: 1.4rem;
@@ -167,17 +165,24 @@ body a {
     transition: color 0.3s ease-in-out;
 }
 
-blockquote a{color: white;}
+blockquote,
+blockquote a{
+    color: white;
+}
 
 section{
     margin-block: 6rem;
     padding-block: 2rem;
-    /* background-color: var(--glass); */
+    background-color: var(--glass);
+}
+
+section:has(blockquote) {
+    background-color: transparent;
 }
 
 /* ------------ nav ------------- */
 .site-nav {
-    padding-block: var(--spacing);
+    padding-block: 0.5rem;
 }
 
 .site-nav .menu {
@@ -227,7 +232,6 @@ section{
   padding-inline: .5rem;
   padding-block: 0.5rem;
   min-width: max(16rem, 24ch);
-  background: var(--peach);
   display: none;
   z-index: 10;
 }
