--- a/direction-3/style.css
+++ b/direction-3/style.css
@@ -106,6 +106,9 @@ p, small{
     color: var(--blue);
 }
 
+.key{
+    
+}
 blockquote {
     position: relative;
     margin-inline-start: 3rem;
@@ -149,7 +152,7 @@ section{
     margin-block: 6rem;
 }
 
-.lines{
+/* .lines{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -157,7 +160,21 @@ section{
     margin-block: 2rem;
     border-top: solid;
     border-bottom: solid;
-    border-width: 1.5px
+    border-width: 1.5px;
+} */
+
+.lines {
+    padding: var(--spacing);
+    margin-block: 2rem;
+    border-top: 1.5px solid var(--blue);
+    border-bottom: 1.5px solid var(--blue);
+    text-align: center;
+}
+
+.multi-temperature{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 .lines, .lines p,
@@ -168,7 +185,8 @@ section{
     text-align: center;
 }
 
-.ch-no{
+.ch-no,
+.key{
     padding: 1rem;
     border-style: solid;
     border-color: var(--blue);
@@ -262,6 +280,7 @@ section{
 
 .terms{
     font-weight: 700;
+    /* display: inline-block; */
 }
 
 .terms::before{
